; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/comctl32/extr_combo.c_create_combobox.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/comctl32/extr_combo.c_create_combobox.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WC_COMBOBOXA = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"Combo\00", align 1
@WS_VISIBLE = common dso_local global i32 0, align 4
@WS_CHILD = common dso_local global i32 0, align 4
@hMainWnd = common dso_local global i32 0, align 4
@COMBO_ID = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @create_combobox to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_combobox(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @WC_COMBOBOXA, align 4
  %4 = load i32, i32* @WS_VISIBLE, align 4
  %5 = load i32, i32* @WS_CHILD, align 4
  %6 = or i32 %4, %5
  %7 = load i32, i32* %2, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @hMainWnd, align 4
  %10 = load i64, i64* @COMBO_ID, align 8
  %11 = trunc i64 %10 to i32
  %12 = call i32 @CreateWindowA(i32 %3, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %8, i32 5, i32 5, i32 100, i32 100, i32 %9, i32 %11, i32* null, i32 0)
  ret i32 %12
}

declare dso_local i32 @CreateWindowA(i32, i8*, i32, i32, i32, i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
